; ModuleID = '/home/carl/AnghaBench/freebsd/sys/fs/nfsclient/extr_nfs_clvnops.c_nfsfifo_read.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/fs/nfsclient/extr_nfs_clvnops.c_nfsfifo_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 (%struct.vop_read_args*)* }
%struct.vop_read_args = type { i32 }
%struct.nfsnode = type { i32, i32 }

@NACC = common dso_local global i32 0, align 4
@fifo_specops = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.vop_read_args*)* @nfsfifo_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nfsfifo_read(%struct.vop_read_args* %0) #0 {
  %2 = alloca %struct.vop_read_args*, align 8
  %3 = alloca %struct.nfsnode*, align 8
  %4 = alloca i32, align 4
  store %struct.vop_read_args* %0, %struct.vop_read_args** %2, align 8
  %5 = load %struct.vop_read_args*, %struct.vop_read_args** %2, align 8
  %6 = getelementptr inbounds %struct.vop_read_args, %struct.vop_read_args* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = call %struct.nfsnode* @VTONFS(i32 %7)
  store %struct.nfsnode* %8, %struct.nfsnode** %3, align 8
  %9 = load %struct.nfsnode*, %struct.nfsnode** %3, align 8
  %10 = call i32 @NFSLOCKNODE(%struct.nfsnode* %9)
  %11 = load i32, i32* @NACC, align 4
  %12 = load %struct.nfsnode*, %struct.nfsnode** %3, align 8
  %13 = getelementptr inbounds %struct.nfsnode, %struct.nfsnode* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = or i32 %14, %11
  store i32 %15, i32* %13, align 4
  %16 = load %struct.nfsnode*, %struct.nfsnode** %3, align 8
  %17 = getelementptr inbounds %struct.nfsnode, %struct.nfsnode* %16, i32 0, i32 0
  %18 = call i32 @vfs_timestamp(i32* %17)
  %19 = load %struct.nfsnode*, %struct.nfsnode** %3, align 8
  %20 = call i32 @NFSUNLOCKNODE(%struct.nfsnode* %19)
  %21 = load i32 (%struct.vop_read_args*)*, i32 (%struct.vop_read_args*)** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @fifo_specops, i32 0, i32 0), align 8
  %22 = load %struct.vop_read_args*, %struct.vop_read_args** %2, align 8
  %23 = call i32 %21(%struct.vop_read_args* %22)
  store i32 %23, i32* %4, align 4
  %24 = load i32, i32* %4, align 4
  ret i32 %24
}

declare dso_local %struct.nfsnode* @VTONFS(i32) #1

declare dso_local i32 @NFSLOCKNODE(%struct.nfsnode*) #1

declare dso_local i32 @vfs_timestamp(i32*) #1

declare dso_local i32 @NFSUNLOCKNODE(%struct.nfsnode*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
